[package]
name = "typestorm"
version = "0.1.2"
edition = "2021"
description = "A cool terminal typing test CLI written in rust"
license = "MIT"
repository = "https://github.com/arnabnandikgp/typestorm"

[dependencies]
ratatui = "0.29.0"
crossterm = "0.28.1"
rand = "0.8.5"
anyhow = "1.0.93"
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
dirs = "6.0.0"
